
syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

option go_package = "./user";

enum SortOrder {
	SORT_ORDER_UNSPECIFIED = 0;
	SORT_ORDER_ASC         = 1;
	SORT_ORDER_DESC        = 2;
  }

message User {
    int32 user_id                               = 1;
    string user_name                            = 2;
    optional string user_name_kana              = 3;
    optional string display_name                = 4;
    string email                                = 5;
    optional google.protobuf.Timestamp birthday = 6;
    optional string twitter_id                  = 7;
    optional string login_id                    = 8;
    string pass                                 = 9;
}

message GetUserRequest{
    int32 user_id = 1;
}

message GetUserResponse {
    User user = 1;
}


// message CreateUserRequest{
//     string user_name                            = 1;
//     optional string user_name_kana              = 2;
//     optional string display_name                = 3;
//     string email                                = 4;
//     optional google.protobuf.Timestamp birthday = 5;
//     optional string twitter_id                  = 6;
//     optional string login_id                    = 7;
//     string pass                                 = 8;
// }

// message CreateUserResponse{
//     User user = 1;
// }

// message UpdateUserRequest{
//     int32 user_id                               = 1;
//     string user_name                            = 2;
//     optional string user_name_kana              = 3;
//     optional string display_name                = 4;
//     string email                                = 5;
//     optional google.protobuf.Timestamp birthday = 6;
//     optional string twitter_id                  = 7;
//     optional string login_id                    = 8;
//     string pass                                 = 9;
// }

// message UpdateUserResponse {
//     User user = 1;
// }

// message DeleteUserRequest {
//     string user_id = 1;
// }

// message ListUsersRequest {
//     enum SortKey {
//         SORT_KEY_UNSPECIFIED = 0;
//         SORT_KEY_ID          = 1;
//         SORT_KEY_NAME        = 2;
//     }

//     repeated uint32 user_ids_query  = 1;  // ユーザーID
//     optional string user_name_query = 2;  // ユーザー名検索

//     optional uint32 limit           = 81;
//     optional uint32 offset          = 82;

//     optional SortKey sort_key       = 91;
//     optional SortOrder sort_order   = 92;
// }

// message ListUsersResponse {
//     User user = 1;
// }

service userService{
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {};
    //rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {};
    //rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {};
    //rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {};
    //rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {};
}
